fixed All Products and some alignment issues

--- a/custom_sass/_standardpage.scss
+++ b/custom_sass/_standardpage.scss
@@ -527,11 +527,12 @@
         .header-container{
             h2.header{
                 margin-bottom:40px;
+                text-align:center;
             }
 
             .description{
                 margin-bottom:50px;
-                max-width:430px;
+                text-align:center;
             }
         }
         
@@ -561,8 +562,11 @@
             
 
             .spotlight-card{
+                align-items:center;
                 border-radius:20px;
                 border:1px solid rgba(0,0,0,0.25);
+                display: flex;
+                flex-direction: column;
                 margin:15px 15px;
                 overflow:hidden;
                 padding:30px;
@@ -578,7 +582,12 @@
                 }
 
                 .item-description{
+                    flex-grow:1;
                     margin-bottom:50px;
+                }
+
+                .pill-cta{
+                    justify-self:end;
                 }
 
             }
@@ -1134,16 +1143,6 @@
         }
 
 
-        .related-articles{
-
-
-            .items{
-
-                .img-link{
-                    width:calc(25% - 30px);
-                }
-            }
-        }
     }
 
     .page_industries-we-serve{
